<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home_tab"
        android:icon="@drawable/ic_home_filled"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_search_tab"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/nav_upload_tab"
        android:icon="@drawable/ic_add"
        android:title="@string/title_upload" />
    <item
        android:id="@+id/nav_notifications_tab"
        android:icon="@drawable/ic_speech_bubble_filled"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/nav_account_tab"
        android:icon="@drawable/ic_person_filled"
        android:title="@string/title_account" />
</menu>